Cloud/Environment/Ingress-Deployment-Prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madworld-ingress
  namespace: madworldnl
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    cert-manager.io/common-name: "www.mad-world.nl"
    cert-manager.io/subject-countries: "NL"
    cert-manager.io/email-sans: "oveldman@gmail.com"
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
spec:
  tls:
    - hosts:
        - www.mad-world.nl
        - identity.mad-world.nl
        - log.mad-world.nl
      secretName: madworld-tls
  rules:
    - host: identity.mad-world.nl
      http:
        paths:
          - path: "/(.*(?:css|css.map|html|js|json|png|txt|wasm)$)|(.*)"
            pathType: Prefix
            backend:
              service:
                name: madworld-identity-admin-web-loadbalancer
                port:
                  number: 80
    - host: log.mad-world.nl
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: seq-loadbalancer
                port:
                  number: 80
    - host: www.mad-world.nl
      http:
        paths:
          - path: "/(.*(?:css|css.map|html|js|json|png|txt|wasm)$)|(.*)"
            pathType: Prefix
            backend:
              service:
                name: madworld-identity-admin-web-loadbalancer
                port:
                  number: 80
